# placebo-shell

./: .gdbinit  Cargo.toml  memory.x  readme.md
.cargo/: config
src/: main.rs  shell.rs  stepper.rs
