[package]
name = "placebo-shell"
authors = ["Vitaly Domnikov <dotcypress@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
ushell = "0.3.5"
stm32g0xx-hal = { version = "0.2.0", features = ["rt", "stm32g031"] }
btoi = { version = "0.4.2", default-features = false }
infrared = "0.11.0"

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"

[profile.release.package."*"]
opt-level = "z"
